# preprompt

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  preprompt.skill.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre_prompt.py
.github/workflows/: ci.yml
cli/: _register.py  commands.py  hook.py  setup.py  watch.py
docs/: index.html
mcp_server/: classifier.py  config.py  extractor.py  optimizer.py  server.py  tools.py
scripts/: init_github.py  install.sh  install_cursor.py  setup_global_hook.py
storage/: db.py
tests/: test_classifier.py  test_integration.py  test_optimizer.py
