[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptforge"
version = "0.1.0"
description = "MCP server that intercepts and optimizes prompts before they reach the LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
promptforge                  = "mcp_server.server:main"
promptforge-history          = "cli.commands:history_cmd"
promptforge-stats            = "cli.commands:stats_cmd"
promptforge-test-classifier  = "cli.commands:test_classifier_cmd"
promptforge-memory           = "cli.commands:memory_cmd"
promptforge-update-context   = "cli.commands:update_context_cmd"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "storage", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
